--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Hello World
+<html>
+    <meta http-equiv="refresh" content="0; url=https://railab.notion.site/RAILab-b0b2706d2d2b45f2b0b8aab681bf1e4f?pvs=4"></meta>
+</html>
